syntax = "proto2";
import "state.proto";

message BasicTelemetry {
    required CarState carState = 1;
    required float speed = 2;
    required float heading = 3;
    required string longitude = 4;
    required string latitude = 5;
    
}

message ExpandedTelemetry {
    required int32 tmp = 1;
}


message DebugStatus {
    required int32 debugStatus = 1;
}
